* Escape html special characters * HTML error message * Auto generate image for pie chart

--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,14 @@ html, body {
     padding: 0;
 }
 
+body.error {
+    background-color: #f00;
+    color: #fff;
+}
+    body.error a {
+        color: #ff0;
+    }
+
 header {
     display: block;
     background-color: #507AAA;
