--- a/public/style.css
+++ b/public/style.css
@@ -8,21 +8,45 @@ html, body {
 }
 
 body.error {
-    background-color: #f00;
-    color: #fff;
+    padding: 1em;
 }
+    body.error p {
+        padding: .5em;
+        border: solid 1px #000;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
+        
+        background: #f85032; /* old browsers */
+        background: -moz-linear-gradient(top, #f85032 0%, #f16f5c 50%, #f6290c 51%, #f02f17 71%, #e73827 100%); /* firefox */
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f85032), color-stop(50%,#f16f5c), color-stop(51%,#f6290c), color-stop(71%,#f02f17), color-stop(100%,#e73827)); /* webkit */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f85032', endColorstr='#e73827',GradientType=0 ); /* ie */
+        
+        color: #fff;
+        
+        -webkit-box-shadow: 1px 1px 3px #999;
+        -moz-box-shadow: 1px 1px 3px #999;
+        box-shadow: 1px 1px 3px #999;
+    }
     body.error a {
         color: #ff0;
     }
 
 header {
     display: block;
-    background-color: #507AAA;
+    
+    background: #7abcff; /* old browsers */
+    background: -moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 88%, #3988D6 99%); /* firefox */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(88%,#4096ee), color-stop(99%,#3988D6)); /* webkit */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7abcff', endColorstr='#3988D6',GradientType=0 ); /* ie */
 }
     header h1 {
         margin: 0 0 30px 0;
         text-align: center;
         color: #fff;
+        
+        text-shadow: 0px 1px 2px #000000;
+        filter: dropshadow(color=#000000, offx=0, offy=1);
     }
 
 nav {
