--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,9 @@ html, body {
 body.error {
     padding: 1em;
 }
+    body.error h1 {
+        margin-bottom: .5em;
+    }
     body.error p {
         padding: .5em;
         border: solid 1px #000;
