--- a/public/style.css
+++ b/public/style.css
@@ -65,10 +65,27 @@ nav {
         padding: 2px .5em;
         font-family: Verdana, sans-serif;
         color: #ccc;
+        
+        text-shadow: 0px 1px 2px #000000;
+        filter: dropshadow(color=#000000, offx=0, offy=1);
     }
     nav li.selected {
         background-color: #fff;
         color: #000;
+        
+        -webkit-border-top-left-radius: 5px;
+        -webkit-border-top-right-radius: 5px;
+        -moz-border-radius-topleft: 5px;
+        -moz-border-radius-topright: 5px;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        
+        -webkit-box-shadow: #1978C6 0px -2px 20px;
+        -moz-box-shadow: #1978C6 0px -2px 20px;
+        box-shadow: #1978C6 0px -2px 20px;
+        
+        text-shadow: none;
+        filter: none;
     }
     nav a {
         font-family: inherit;
@@ -78,6 +95,9 @@ nav {
     }
 
 article {
+    position: relative;
+    z-index: 2;
+    background-color: #fff;
     display: none;
     padding: 1.5em 5px 5px 5px;
 }
